{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 68,
  "lineage": "29d00ee6-71ef-d1fa-bd63-0d93dbe6563a",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:security-group/sg-0f765a9df69f50bba",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f765a9df69f50bba",
            "ingress": [],
            "name": "amazon-prime-cluster-cluster-2025060406293043730000000c",
            "name_prefix": "amazon-prime-cluster-cluster-",
            "owner_id": "550149511187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-cluster"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:security-group/sg-0bc7afa102e839317",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0bc7afa102e839317",
            "ingress": [],
            "name": "amazon-prime-cluster-node-2025060406292807650000000b",
            "name_prefix": "amazon-prime-cluster-node-",
            "owner_id": "550149511187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-node",
              "kubernetes.io/cluster/amazon-prime-cluster": "owned"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-node",
              "kubernetes.io/cluster/amazon-prime-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-644051789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f765a9df69f50bba",
            "security_group_rule_id": "sgr-0fa02bef0e360c79b",
            "self": false,
            "source_security_group_id": "sg-0bc7afa102e839317",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-620656801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-012ff93af55d7a618",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2939774341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-09c2dccc51ee38299",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2488654674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0faf83750b2f941b3",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1561836740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0a52b11a81d84730a",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1313571045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-00135ea987404be99",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-720024366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0b139f1c023418055",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3449027299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0670ee96c71ab067a",
            "self": false,
            "source_security_group_id": "sg-0f765a9df69f50bba",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1879872984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0a3a6e561c997462e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1917008513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-0d60a54834291a484",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3592198510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bc7afa102e839317",
            "security_group_rule_id": "sgr-06656af5f49b981dd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:network-acl/acl-0d8ec1cef21fe180c",
            "default_network_acl_id": "acl-0d8ec1cef21fe180c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d8ec1cef21fe180c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "550149511187",
            "subnet_ids": [
              "subnet-08777218df2b9d9ad",
              "subnet-0a561777007a4f963",
              "subnet-0afa0cd84b78c9f82",
              "subnet-0e74d778aa76a7f47",
              "subnet-0f8fdbfa78afe8fb8"
            ],
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:route-table/rtb-0e2858189629762ff",
            "default_route_table_id": "rtb-0e2858189629762ff",
            "id": "rtb-0e2858189629762ff",
            "owner_id": "550149511187",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:security-group/sg-06b132929ee524223",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06b132929ee524223",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "550149511187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e265d19c94644475",
            "arn": "arn:aws:ec2:us-east-1:550149511187:elastic-ip/eipalloc-0e265d19c94644475",
            "domain": "vpc",
            "id": "eipalloc-0e265d19c94644475",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-83-47.compute-1.amazonaws.com",
            "public_ip": "3.223.83.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-prime-cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017d8592401426cd1",
            "arn": "arn:aws:ec2:us-east-1:550149511187:elastic-ip/eipalloc-017d8592401426cd1",
            "domain": "vpc",
            "id": "eipalloc-017d8592401426cd1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-156-59.compute-1.amazonaws.com",
            "public_ip": "3.222.156.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-prime-cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:internet-gateway/igw-03723c659d8337849",
            "id": "igw-03723c659d8337849",
            "owner_id": "550149511187",
            "tags": {
              "Name": "amazon-prime-cluster"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e265d19c94644475",
            "association_id": "eipassoc-08a7afe04d7927c43",
            "connectivity_type": "public",
            "id": "nat-0693a3d43514a1956",
            "network_interface_id": "eni-00b6e1ea29dba3060",
            "private_ip": "10.0.1.45",
            "public_ip": "3.223.83.47",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8fdbfa78afe8fb8",
            "tags": {
              "Name": "amazon-prime-cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017d8592401426cd1",
            "association_id": "eipassoc-0aa96cceaa646b440",
            "connectivity_type": "public",
            "id": "nat-0997dd759b2d41dd0",
            "network_interface_id": "eni-0e6ff5236733af030",
            "private_ip": "10.0.2.222",
            "public_ip": "3.222.156.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f26bd4bc39ee6d5",
            "tags": {
              "Name": "amazon-prime-cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e2d7d02333f5e62c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0693a3d43514a1956",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2d7d02333f5e62c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0995bfe25f57fb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0997dd759b2d41dd0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0995bfe25f57fb9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03723c659d8337849",
            "id": "r-rtb-0ee499e04e67d823b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee499e04e67d823b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:route-table/rtb-01a2a4e73b6a12b2b",
            "id": "rtb-01a2a4e73b6a12b2b",
            "owner_id": "550149511187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-intra"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:route-table/rtb-0e2d7d02333f5e62c",
            "id": "rtb-0e2d7d02333f5e62c",
            "owner_id": "550149511187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-private-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:route-table/rtb-0c0995bfe25f57fb9",
            "id": "rtb-0c0995bfe25f57fb9",
            "owner_id": "550149511187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-private-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:route-table/rtb-0ee499e04e67d823b",
            "id": "rtb-0ee499e04e67d823b",
            "owner_id": "550149511187",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-public"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-005771743955afdc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0245cf544552cd932",
            "route_table_id": "rtb-01a2a4e73b6a12b2b",
            "subnet_id": "subnet-0afa0cd84b78c9f82"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367474127535abd7",
            "route_table_id": "rtb-01a2a4e73b6a12b2b",
            "subnet_id": "subnet-0a561777007a4f963"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075f75ff38812ea63",
            "route_table_id": "rtb-0e2d7d02333f5e62c",
            "subnet_id": "subnet-0e74d778aa76a7f47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ebac79f7fb8c4d",
            "route_table_id": "rtb-0c0995bfe25f57fb9",
            "subnet_id": "subnet-08777218df2b9d9ad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e29c5b89ea1e0a56",
            "route_table_id": "rtb-0ee499e04e67d823b",
            "subnet_id": "subnet-0f8fdbfa78afe8fb8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b98a694cfedd41bc",
            "route_table_id": "rtb-0ee499e04e67d823b",
            "subnet_id": "subnet-07f26bd4bc39ee6d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-0afa0cd84b78c9f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afa0cd84b78c9f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra-us-east-1a"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-0a561777007a4f963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a561777007a4f963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra-us-east-1b"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-0e74d778aa76a7f47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74d778aa76a7f47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-08777218df2b9d9ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08777218df2b9d9ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-0f8fdbfa78afe8fb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8fdbfa78afe8fb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:subnet/subnet-07f26bd4bc39ee6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f26bd4bc39ee6d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550149511187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005771743955afdc2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:550149511187:vpc/vpc-005771743955afdc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8ec1cef21fe180c",
            "default_route_table_id": "rtb-0e2858189629762ff",
            "default_security_group_id": "sg-06b132929ee524223",
            "dhcp_options_id": "dopt-0f3730152208cb7f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005771743955afdc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2858189629762ff",
            "owner_id": "550149511187",
            "tags": {
              "Name": "amazon-prime-cluster"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}